--- a/Action page.html
+++ b/Action page.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <head>
 <title>EAGLES MOVIE CINEMA</title>
-  <link rel="icon" type="image/x-icon" href="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
 <style>
 
 body {
@@ -123,7 +123,7 @@ li.dropdown {
  </form>
  
  <ul>
-  <li><a href="index.html"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
+  <li><a href="index.html"><img src="favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
   <li><a href="movies theatre.html" class="active">Home</a></li>
   <li><a href="latest page.html" class="active">Latest</a></li>
   <li class="dropdown">
@@ -142,7 +142,7 @@ li.dropdown {
 <div class="container">
 
 <div class="action">
-<img src ="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\drive.jpg">
+<img src ="drive.jpg">
 <div class="r" style="color: red">DRIVE</div>
 <div class= "p">A crew has to deliver a cue to city of Detroit but they face many obstacles on their way.<br>Duration: 2hrs 55mins<br>PG: 18SNVL<br>Cast: Tom Halland, Leeroy Wright</br></div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -150,7 +150,7 @@ li.dropdown {
 </div>
 
 <div class ="action">
-<img src ="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\avatar.jpg">
+<img src ="avatar.jpg">
 <div class="r" style="color: red">AVATAR</div>
 <div class="p">Mandara was left alone in the woods at the age of five and she survived by living with the wolves.<br>Duration: 1hr 35mins<br>PG: 16SNL<br>Cast: Sandra Ballock,Michael Derulo</br></div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -158,7 +158,7 @@ li.dropdown {
 </div>
 
 <div class="action">
-<img src ="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\suicide squad.jpg">
+<img src ="suicide squad.jpg">
 <div class="r" style="color: red">SUICIDE SQUAD</div>
 <div class="p">A group of teenagers is fighting for survival in the city full of zombies, they take back the city.<br>Duration: 2hrs 15mins<br>PG: 13SVL<br>Cast: Liam Neelson,Whitney Scholes</br></div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -166,7 +166,7 @@ li.dropdown {
 </div>
 
 <div class="action">
-<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\army.jpg">
+<img src="army.jpg">
 <div class="r" style="color: red">BLEEDING</div>
 <div class="p">Bleeding from the wonders of the past, a retired cop hunts down the terrorists who killed his family.<br>Duration: 1hr 45mins<br>PG: 16SNVL<br>Cast: Samuel Jackson, Darren Right</br></div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -174,7 +174,7 @@ li.dropdown {
 </div>
 
 <div class="action">
-<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\black widow.jpg">
+<img src="black widow.jpg">
 <div class="r" style="color: red">BLACK WIDOW</div>
 <div class="p">Black widow is a woman who is determined to steal gold for fortune and she decides to rob a World Bank all by herself.<br>Duration: 2hrs 15mins<br>PG: 13VL<br>Cast: Sandra Ballock,Dax Mike</br></div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -182,7 +182,7 @@ li.dropdown {
 </div>
 
 <div class="action">
-<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\after.jpg">
+<img src="after.jpg">
 <div class="r" style="color: red">WONDER WOMAN</div>
 <div class="p">After the death of her parents killed by  terrorists. Octavia goes out to seek revenge against her parent's killers.<br>Duration: 1hr 30mins<br>PG: 16L<br>Cast: Taylor White,Susan Viking</br></div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -190,7 +190,7 @@ li.dropdown {
 </div>
 
 <div class="action">
-<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\flint.jpg">
+<img src="flint.jpg">
 <div class="r" style="color: red">FLINT</div>
 <div class="p">A man is trying to protect his family against a corrupted goverment which wants to kill them, he goes out to find justice.<br>Duration: 2hrs<br>PG: 18VL<br>Cast: Treavor Noah,Kate Robin</br></div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -198,7 +198,7 @@ li.dropdown {
 </div>
 
 <div class="action"> 
-<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\Army of the dead.webp">
+<img src="Army of the dead.webp">
 <div class="r" style="color: red">THE DEAD</div>
 <div class="p">A city is attacked by aliens which wanted to eliminate the human race by take over the planet earth.<br>Duration: 1hr 15min<br>PG: 16L<br>Cast: Wesley Sniper,Darren Armor</br></div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -206,7 +206,7 @@ li.dropdown {
 </div>
 
 <div class="action">
-<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\F9.jpg">
+<img src="F9.jpg">
 <div class="r" style="color: red">F9</div>
 <div class="p">A group of street races are fighting for 15million and the winner takes all,but they face a big challenge to beat the cops.<br>Duration: 2hrs 55min<br>PG: 13VL<br>Cast: Paul Walker,Vin Diesel</br></div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -236,12 +236,12 @@ li.dropdown {
 <footer>
 <ul>
 <li>
- <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
-  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
-  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
-  <a href="https://twitter.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\twitter.png" alt="twitter" width="50px" height="30px"></a>
-  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\instagram.jpg" alt="instagram" width="50px" height="30px"></a>
-  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\youtube.png" alt="youtube" width="50px" height="30px"></a>
+ <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
+  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
+  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
+  <a href="https://twitter.com/Eagles Movie Cinema"><img src="twitter.png" alt="twitter" width="50px" height="30px"></a>
+  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="instagram.jpg" alt="instagram" width="50px" height="30px"></a>
+  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="youtube.png" alt="youtube" width="50px" height="30px"></a>
     <p style="color: red;">Created and Managed by Batsho Kgosietsile Tabona<br>COPYRIGHTS@Eagles Movie Cinema<br>20 February 2020</br></p>
    <p style="color: red;">Call and Book us on:<br>+267 76285635<br>+267 35156<br>+267 32985<br>We are number one providing cinema</br></p>
    </li>
