--- a/Contact Us.html
+++ b/Contact Us.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <head>
 <title>EAGLES MOVIE CINEMA</title>
-  <link rel="icon" type="image/x-icon" href="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\.png">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
 <style>
 
 body {
@@ -90,7 +90,7 @@ li.dropdown {
 </div>
 
  <ul>
-  <li><a href="index.html"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
+  <li><a href="index.html"><img src="favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
   <li><a href="movies theatre.html" class="active">Home</a></li>
   <li><a href="latest page.html" class="active">Latest</a></li>
   <li class="dropdown">
@@ -111,17 +111,17 @@ li.dropdown {
 
  <ul>
  <li>
- <a href="https://www.facebook.com/Eagles Movies"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
+ <a href="https://www.facebook.com/Eagles Movies"><img src="facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
  Facebook page: Eagles Movie Cinema</li>
                     </ul>
                                 <ul>
  <li>
-  <a href="https://wa.me/+26776285635"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
+  <a href="https://wa.me/+26776285635"><img src="whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
   Whatsapp us for bookings and share your comments.</li>
                                               </ul> 
                              <ul>
   <li>
-  <a href="mailto:tabonabatsho1@gmail.com"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\g-mail.png" alt="E-mail" width="50px" height= "30px"></a>
+  <a href="mailto:tabonabatsho1@gmail.com"><img src="g-mail.png" alt="E-mail" width="50px" height= "30px"></a>
   E-mail us for bookings and share your comments.</li>
                                       </ul>
                <ul>
@@ -137,13 +137,13 @@ li.dropdown {
 					 
 	      <ul>
      <li>
-    <a href="https://www.youtube.com/"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\youtube.png" alt="youtube" width="50px" height="30px"></a>
+    <a href="https://www.youtube.com/"><img src="youtube.png" alt="youtube" width="50px" height="30px"></a>
 	Youtube page: Eagles Movie Cinema</li>
 	                </ul>
 			
      <ul>
 <li>
- <a href=""><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\call us.png" alt="Call Us" width="50px" height="30px"></a>
+ <a href=""><img src="call us.png" alt="Call Us" width="50px" height="30px"></a>
  You can call our helpline desk at the following numbers;</li>
  <p>+267 76285635<br>+267 35156<br>+267 32985</br></p>
           </ul>								
