--- a/Amination.html
+++ b/Amination.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <head>
 <title>EAGLES MOVIE CINEMA</title>
-  <link rel="icon" type="image/x-icon" href="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
 <style>
 
 body {
@@ -122,7 +122,7 @@ li.dropdown {
  </form>
  
  <ul>
-  <li><a href="index.html"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
+  <li><a href="index.html"><img src="favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
   <li><a href="movies theatre.html" class="active">Home</a></li>
   <li><a href="latest page.html" class="active">Latest</a></li>
   <li class="dropdown">
@@ -141,7 +141,7 @@ li.dropdown {
 <div class="container">
  
  <div class="amination">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\space.jpg">
+ <img src="space.jpg">
   <div class="r" style="color: red">CARS</div>
  <div class="p">Friends are put to a test to see if they can work together. They are enrolled in a tournament to race against each other and the winner has the chance to lead others. Will they fall for the trick?Find out.<br>Duration: 1hr 55mins<br>PG: Family<br>Cast: David Moore, Martin Smith</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -149,7 +149,7 @@ li.dropdown {
  </div>
  
  <div class="amination">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\lion king.jpg">
+ <img src="lion king.jpg">
   <div class="r" style="color: red">LION KING</div>
  <div class="p">A young lion is born in a ruling kingdom and now when his father dies, he is left with the responsibility of leading his kingdom and defeat other kingdoms which want to rule. Will he defeat them?<br>Duration: 1hr 30mins<br>PG: 13L<br>Cast: Sidney Mings, Philip Adams</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -165,7 +165,7 @@ li.dropdown {
  </div>
  
  <div class="amination">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\frozen.jpg">
+ <img src="frozen.jpg">
   <div class="r" style="color: red">RIO</div>
  <div class="p">A family of peacocks takes an adventure on the sea of Madagascar to experince the beauty of the nature and saddnly they become trapped in the middle of the sea with storms coming their way.<br>Duration: 1hr 25mins<br>PG: Family<br>Cast: Darren Moore, Ephraim Wings</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -181,7 +181,7 @@ li.dropdown {
  </div>
  
  <div class="amination">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\panther.jpg">
+ <img src="panther.jpg">
   <div class="r" style="color: red">THE TEST</div>
  <div class="p">A King and his Queen are happily married and ruling their country in peace until the Quee dies beacues of a short illness which seem to have attacked the whole country. Will he be able to save his country?<br>Duration: 1hr 45mins<br>PG: Family<br>Cast: David Flaw, Lawrence Viking</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -189,7 +189,7 @@ li.dropdown {
  </div>
  
  <div class="amination">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\sniper.jpg">
+ <img src="sniper.jpg">
   <div class="r" style="color: red">DOG</div>
  <div class="p">A bulldog loves eating eating fruits gathered from the jungle, one time it followed the cent of some fruits and upon the way it got lost and now it has been stranded in a forest full of scavengers.<br>Duration: 1hr 30mins<br>PG: Family<br>Csat: Eddie Seth, Rowen Ciara</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -197,7 +197,7 @@ li.dropdown {
  </div>
  
  <div class="amination">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\COD.jpg">
+ <img src="COD.jpg">
   <div class="r" style="color: red">AVENGERS</div>
  <div class="p">A group of superhumans are tasked to protect information cointaining secrets about their country. Now they face a group of evil villians who want to take over the information and leak it so they cause caos.<br>Duration: 2hrs 45mins<br>PG: 16SNL<br>Cast: Adam Taylor, Queen Rio</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -205,7 +205,7 @@ li.dropdown {
  </div>
  
  <div class="amination">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\Extraction.jpg">
+ <img src="Extraction.jpg">
   <div class="r" style="color: red">THE SIMPSONS</div>
  <div class="p">A family is always happy no matter what happnes, now they face a difficult time where they have to be evacuated from the government house. Will they overcome the situation and be happy? Find out.<br>Duration: 1hr 45mins<br>PG: 13L<br>Cast: Lawrence Martin, Andy Amore</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -236,12 +236,12 @@ li.dropdown {
 <footer>
 <ul>
 <li>
- <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
-  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
-  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
-  <a href="https://twitter.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\twitter.png" alt="twitter" width="50px" height="30px"></a>
-  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\instagram.jpg" alt="instagram" width="50px" height="30px"></a>
-  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\youtube.png" alt="youtube" width="50px" height="30px"></a>
+ <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
+  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
+  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
+  <a href="https://twitter.com/Eagles Movie Cinema"><img src="twitter.png" alt="twitter" width="50px" height="30px"></a>
+  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="instagram.jpg" alt="instagram" width="50px" height="30px"></a>
+  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="youtube.png" alt="youtube" width="50px" height="30px"></a>
     <p style="color: red;">Created and Managed by Batsho Kgosietsile Tabona<br>COPYRIGHTS@Eagles Movie Cinema<br>20 February 2020</br></p>
    <p style="color: red;">Call and Book us on:<br>+267 76285635<br>+267 35156<br>+267 32985<br>We are number one providing cinema</br></p>
    </li>
