--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="eng"
 <head>
 <title>EAGLES MOVIE CINEMA</title>
-  <link rel="icon" type="image/x-icon" href="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
 <style>
 body{
  background: linear-gradient(to left ,black -38%, black 100%);
@@ -104,7 +104,7 @@ color: white;
  </form>
  
  <ul>
-  <li><a href="index.html"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
+  <li><a href="index.html"><img src="favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
   <li><a href="movies theatre.html" class="active">Home</a></li>
   <li><a href="latest page.html" class="active">Latest</a></li>
   <li class="dropdown">
@@ -120,7 +120,7 @@ color: white;
   </ul>
 
 
-<a href="index.html"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png" alt="HOME" width= "50px" height= "50px"></a>
+<a href="index.html"><img src="favicon.png" alt="HOME" width= "50px" height= "50px"></a>
 <p style="text-align:center;"><a href="movies theatre.html">EAGLES MOVIE CINEMA</a></p>
 <hr>
 </hr>
@@ -162,12 +162,12 @@ It is a flexible website,it can be reached on smartphones and it is ad free.<br>
 <footer>
 <ul>
 <li>
- <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
-  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
-  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
-  <a href="https://twitter.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\twitter.png" alt="twitter" width="50px" height="30px"></a>
-  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\instagram.jpg" alt="instagram" width="50px" height="30px"></a>
-  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\youtube.png" alt="youtube" width="50px" height="30px"></a>
+ <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
+  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
+  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
+  <a href="https://twitter.com/Eagles Movie Cinema"><img src="twitter.png" alt="twitter" width="50px" height="30px"></a>
+  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="instagram.jpg" alt="instagram" width="50px" height="30px"></a>
+  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="youtube.png" alt="youtube" width="50px" height="30px"></a>
     <p style="color: red;">Created and Managed by Batsho Kgosietsile Tabona<br>COPYRIGHTS@Eagles Movie Cinema<br>20 February 2020</br></p>
    <p style="color: red;">Call and Book us on:<br>+267 76285635<br>+267 35156<br>+267 32985<br>We are number one providing cinema</br></p>
    </li>
