--- a/horror.html
+++ b/horror.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <head>
 <title>EAGLES MOVIE CINEMA</title>
-  <link rel="icon" type="image/x-icon" href="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
 <style>
 
 body {
@@ -122,7 +122,7 @@ li.dropdown {
  </form>
  
  <ul>
-  <li><a href="index.html"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
+  <li><a href="index.html"><img src="favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
   <li><a href="movie theatre.html" class="active">Home</a></li>
   <li><a href="latest page.html" class="active">Latest</a></li>
   <li class="dropdown">
@@ -141,7 +141,7 @@ li.dropdown {
 <div class="container">
  
  <div class="horror">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\the skeleton.jpg">
+ <img src="the skeleton.jpg">
  <div class="r" style="color: red">ALL OF US ARE DEAD</div>
  <div class="p">Dead people start waking up from the graveyards, waking up as zombies. Now they bury the alive to take over the town.<br>Duration: 1hr 55mins<br>PG: 18VL<br>Cast: Florence Ach, Atty Morty</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -149,7 +149,7 @@ li.dropdown {
  </div>
  
  <div class="horror">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\lost.jpg">
+ <img src="lost.jpg">
  <div class="r" style="color: red">HUNTERS</div>
  <div class="p">A group of hunters is lost in the woods looking for food and now they are being the ones hunted by a group of lions hungry for food.<br>Duration: 2hrs 50mins<br>PG: 16VL<br>Cast: Dave Wills, Britney Smalls</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -157,7 +157,7 @@ li.dropdown {
  </div>
  
  <div class="horror">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\haunted house.jpg">
+ <img src="haunted house.jpg">
  <div class="r" style="color: red">HAUNTED HOUSE</div>
  <div class="p">Lost in the jungle at midnight a group of college teens find out a house and they rest inside, little did they know they met their fate as monster kills them in their sleep.<br>Duration: 2hrs 45mins<br>PG: 16L<br>Cast: Seth Flaw, Katy Perry</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -165,7 +165,7 @@ li.dropdown {
  </div>
  
  <div class="horror">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\joker.jpg">
+ <img src="joker.jpg">
  <div class="r" style="color: red">JOKER</div>
  <div class="p">As the name speaks, Joker is a serial killer wanted by the army for killing people and ctting off their hands and heads.<br>Duration: 2hrs 25mins<br>PG: 13VL<br>Cast:Martha Adams, Queen Ply</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -173,7 +173,7 @@ li.dropdown {
  </div>
  
  <div class="horror">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\invincible.jpg">
+ <img src="invincible.jpg">
  <div class="r" style="color: red">INVINCIBLE</div>
  <div class="p">A man is invincible and he uses the advantage to kill his enemies without being realized. He enjoys it and start to kill everyone so he can be left alone.<br>Duration: 1hr 49mins<br>PG: 16SNL<br>Cast: Martha Adams, Nelson Stones</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -181,7 +181,7 @@ li.dropdown {
  </div>
  
  <div class="horror">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\gruesome.jpg">
+ <img src="gruesome.jpg">
  <div class="r" style="color: red">TERRIFIER</div>
  <div class="p">A boy who grew up lonely starts to kill people because he does not appreciate them and he enjoys staying alone. He makes killing his hobby<br>Duration: 2hrs 55mins<br>PG: 18SNL<br>Cast: Frank Flopper, Grace Wiss</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -189,7 +189,7 @@ li.dropdown {
  </div>
  
  <div class="horror">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\creepy.jpg">
+ <img src="creepy.jpg">
  <div class="r" style="color: red">DON'T BREATHE</div>
  <div class="p">An old man who lived for over 150 years, eats people's intestines and then feeds the body to his dogs. It gets worse when he starts hunting people of the city of Goa.<br>Duration: 1hr 45mins<br>PG: 18SNL<br>Cast: Sophie Rider, Letty Viking</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -197,7 +197,7 @@ li.dropdown {
  </div>
  
  <div class="horror">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\ice queen.jpg">
+ <img src="ice queen.jpg">
  <div class="r" style="color: red">ICE QUEEN</div>
  <div class="p">Known as Queen of the jungle, a lady kills anyone who visit the jungle by torturing them and feeding them to poisonous snakes.<br>Duration: 1hr 30mins<br>PG: 13VL<br>Cast: Sandra Ballock, Viona Lopez</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -205,7 +205,7 @@ li.dropdown {
  </div>
  
  <div class="horror">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\hands.jpg">
+ <img src="hands.jpg">
  <div class="r" style="color: red">GHOST</div>
  <div class="p">A lady is bewetchied for stealing chickens and she starts growing hands all over her body. She uses it to her advantage, to kill people and take their belongings.<br>Duration: 1hr 30mins<br>PG: 18SNL<br>Cast: Jennifer Lopez, Katy Perry</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -237,12 +237,12 @@ li.dropdown {
 <footer>
 <ul>
 <li>
- <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
-  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
-  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
-  <a href="https://twitter.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\twitter.png" alt="twitter" width="50px" height="30px"></a>
-  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\instagram.jpg" alt="instagram" width="50px" height="30px"></a>
-  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\youtube.png" alt="youtube" width="50px" height="30px"></a>
+ <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
+  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
+  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
+  <a href="https://twitter.com/Eagles Movie Cinema"><img src="twitter.png" alt="twitter" width="50px" height="30px"></a>
+  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="instagram.jpg" alt="instagram" width="50px" height="30px"></a>
+  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="youtube.png" alt="youtube" width="50px" height="30px"></a>
     <p style="color: red;">Created and Managed by Batsho Kgosietsile Tabona<br>COPYRIGHTS@Eagles Movie Cinema<br>20 February 2020</br></p>
    <p style="color: red;">Call and Book us on:<br>+267 76285635<br>+267 35156<br>+267 32985<br>We are number one providing cinema</br></p>
    </li>
