--- a/movies theatre.html
+++ b/movies theatre.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <head>
 <title>EAGLES MOVIE CINEMA</title>
-  <link rel="icon" type="image/x-icon" href="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
 <style>
 
 body {
@@ -122,7 +122,7 @@ color: red;
  </form>
  
  <ul>
-  <li><a href="index.html"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
+  <li><a href="index.html"><img src="favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
   <li><a href="movies theatre.html" class="active">Home</a></li>
   <li><a href="latest page.html" class="active">Latest</a></li>
   <li class="dropdown">
@@ -143,7 +143,7 @@ color: red;
 <div class="container">
 
 <div class="action">
-<img src ="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\rango.jpg">
+<img src ="rango.jpg">
 <div class="r" style="color: red">RANGO</div>
 <div class="p">Genre: Amination, Comedy Movie</div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -151,7 +151,7 @@ color: red;
 </div>
 
 <div class="action">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\chucky.jpg">
+ <img src="chucky.jpg">
  <div class="r">CHUCKY</div>
  <div class="p">Genre: Horror Movie</div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -160,7 +160,7 @@ color: red;
 
 
 <div class="action">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\Americans.jpg">
+ <img src="Americans.jpg">
  <div class="r">EXTRACTION</div>
  <div class="p">Genre: Action, War Movie</div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -168,7 +168,7 @@ color: red;
  </div>
  
  <div class="action">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\scream.jpg">
+ <img src="scream.jpg">
  <div class="r">SCREAM</div>
  <div class="p">Genre: Horror, Comedy Movie</div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -176,7 +176,7 @@ color: red;
  </div>
  
  <div class="action">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\sentinelle.jpg">
+ <img src="sentinelle.jpg">
  <div class="r">SENTINELLE</div>
  <div class="p">Genre: Action, War Movie</div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -184,7 +184,7 @@ color: red;
  </div>
  
  <div class="action">
-<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\panther.jpg">
+<img src="panther.jpg">
 <div class="r">THE TEST</div>
 <div class="p">Genre: Amination Movie</div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -197,7 +197,7 @@ color: red;
 <div class="container">
 
 <div class="action">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\kung fu panda.jpg">
+ <img src="kung fu panda.jpg">
  <div class="r">KUNG FU PANDA</div>
  <div class="p">Genre: Amination, Action Movie</div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -205,7 +205,7 @@ color: red;
  </div>
 
  <div class="action">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\haunted house.jpg">
+ <img src="haunted house.jpg">
  <div class="r">HAUNTED HOUSE</div>
  <div class="p">Genre: Horror Movie</div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -213,7 +213,7 @@ color: red;
  </div>
 
 <div class="action">
-<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\moana.jpg">
+<img src="moana.jpg">
 <div class="r">MOANA</div>
 <div class="p">Genre: Amination, Comedy Movie</div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -221,7 +221,7 @@ color: red;
 </div>
 
 <div class="action">
-<img src ="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\suicide squad.jpg">
+<img src ="suicide squad.jpg">
 <div class="r">SUICIDE SQUAD</div>
 <div class="p">Genre: Action, Romance Movie</div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -229,7 +229,7 @@ color: red;
 </div>
 
  <div class="action">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\annabela.jpg">
+ <img src="annabela.jpg">
  <div class="r">ANNABELLE</div>
  <div class="p">Genre: Horror, Thriller Movie</div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -237,7 +237,7 @@ color: red;
  </div>
 
 <div class="action">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\tears of the sun.jpg">
+ <img src="tears of the sun.jpg">
  <div class="r">TEARS OF THE SUN</div>
  <div class="p">Genre: War Movie</div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -250,7 +250,7 @@ color: red;
 <div class="container">
 
 <div class="action">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\sniper.jpg">
+ <img src="images\sniper.jpg">
  <div class="r">DOG</div>
  <div class="p">Genre: Amination, Comedy Movie</div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -258,7 +258,7 @@ color: red;
  </div>
  
  <div class="action">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\the nun.jpg">
+ <img src="the nun.jpg">
  <div class="r">THE NUN</div>
  <div class="p">Genre: Horror Movie</div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -266,7 +266,7 @@ color: red;
  </div>
  
  <div class="action">
-<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\black widow.jpg">
+<img src="black widow.jpg">
 <div class="r">BLACK WIDOW</div>
 <div class="p">Genre: Action Movie</div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -274,7 +274,7 @@ color: red;
 </div>
 
  <div class="action">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\invincible.jpg">
+ <img src="invincible.jpg">
  <div class="r">INVINCIBLE</div>
  <div class="p">Genre: Horror Movie</div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -282,7 +282,7 @@ color: red;
  </div>
  
  <div class="action">
-<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\flint.jpg">
+<img src="flint.jpg">
 <div class="r">FLINT</div>
 <div class="p">Genre: Action, Thriller Movie</div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -291,7 +291,7 @@ color: red;
 
 
 <div class="action">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\rena.jpg">
+ <img src="rena.jpg">
  <div class="r">BRIDGE OF SPIRITS</div>
  <div class="p">Genre: Amination Movie</div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -305,12 +305,12 @@ color: red;
 <footer>
 <ul>
 <li>
- <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
-  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
-  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
-  <a href="https://twitter.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\twitter.png" alt="twitter" width="50px" height="30px"></a>
-  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\instagram.jpg" alt="instagram" width="50px" height="30px"></a>
-  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\youtube.png" alt="youtube" width="50px" height="30px"></a>
+ <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
+  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
+  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
+  <a href="https://twitter.com/Eagles Movie Cinema"><img src="twitter.png" alt="twitter" width="50px" height="30px"></a>
+  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="instagram.jpg" alt="instagram" width="50px" height="30px"></a>
+  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="youtube.png" alt="youtube" width="50px" height="30px"></a>
     <p style="color: red;">Created and Managed by Batsho Kgosietsile Tabona<br>COPYRIGHTS@Eagles Movie Cinema<br>20 February 2020</br></p>
    <p style="color: red;">Call and Book us on:<br>+267 76285635<br>+267 35156<br>+267 32985<br>We are number one providing cinema</br></p>
    </li>
