--- a/Amination.html
+++ b/Amination.html
@@ -173,7 +173,7 @@ li.dropdown {
  </div>
  
  <div class="amination">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\moana.jpg">
+ <img src="moana.jpg">
   <div class="r" style="color: red">MOANA</div>
  <div class="p">Two siblings have dedicated to protect their home village against evil villians who want to take over the village. Now they face a big challenge when they have to fight a more stong villian.<br>Duration: 2hrs 35mins<br>PG: 13L<br>Cast: Lillian Perry, Mark Moore</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
