--- a/Payment .html
+++ b/Payment .html
@@ -95,7 +95,7 @@ float: left;
 <body>
  
  <div class="navbar">
-<a href="Login.html" class="active">Buy Tickets</a>
+<a href="Payment.html" class="active">Buy Tickets</a>
 </div>
 
  <ul>
