--- a/Contact Us.html
+++ b/Contact Us.html
@@ -126,12 +126,12 @@ li.dropdown {
                                       </ul>
                <ul>
 	 <li>
-    <a href="https://twitter.com/?lang=en"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\twitter.png" alt="twitter" width="50px" height="30px"></a>
+    <a href="https://twitter.com/?lang=en"><img src="twitter.png" alt="twitter" width="50px" height="30px"></a>
 	Twitter page: Eagles Movie Cinema</li>
 	                                </ul>
                      <ul>
 	<li>
-	<a href="https://www.instagram.com/"><img src ="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\instagram.jpg" alt="instagram" width="50px" height="30px"></a>
+	<a href="https://www.instagram.com/"><img src ="instagram.jpg" alt="instagram" width="50px" height="30px"></a>
 	Instagram page: Eagles_ Movie_Cinema</li>
 	                 </ul>
 					 
