--- a/movies theatre.html
+++ b/movies theatre.html
@@ -116,7 +116,7 @@ color: red;
 <a href="Payment.html" class="active">Buy Tickets</a>
 </div>
 
-<form class="image" action="Index.html">
+<form class="image" action="index.html">
  <input type="text" placeholder="Search movies.." name="search">
  <button type="submit"><i class="fa fa-search"></i></button>
  </form>
@@ -250,7 +250,7 @@ color: red;
 <div class="container">
 
 <div class="action">
- <img src="images\sniper.jpg">
+ <img src="sniper.jpg">
  <div class="r">DOG</div>
  <div class="p">Genre: Amination, Comedy Movie</div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
