--- a/Amination.html
+++ b/Amination.html
@@ -157,7 +157,7 @@ li.dropdown {
  </div>
  
  <div class="amination">
- <img src="Adventure.jpg">
+ <img src="adventure.jpg">
   <div class="r" style="color: red">ADVENTURE</div>
  <div class="p">A young couple who just newly wedded goes on an adventure to the city of Peru for their honeymoon but takes a sour turn as the city is attack by terrorists who capture people. Will he protect his wife?<br>Duration: 2hrs 20mins<br>PG: 13VL<br>Cast: Amore Ings, Rittar Lance</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
